--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,15 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "build": "tsc -b",
+    "start": "node dist/index.js",
+    "dev": "npm run build && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "zod": "^4.1.12"
